# exemploPerfil

./: README.md  manage.py  pyproject.toml  requirements.txt
exemploPerfil/: app.py  models.py
exemploPerfil/blueprints/usuarios/: models.py  usuarios.py
exemploPerfil/blueprints/usuarios/templates/usuarios/: edicao.html  index.html  novo.html
exemploPerfil/templates/: index.html
migrations/versions/: 5ada7c876953_inicio.py  ae3f8e2ff9fc_tornei_nome_unico.py
